﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

ADDONS:
	- Fixed: Awstats - Error: Couldn't open server log file...
	- Fixed: Roundcube|PhpMyAdmin installers - Ensure that database tables exist (recovery case)
	- Fixed: PhpMyAdmin 4.1.0 is only compatible with MySQL Server version 5.5 and newer

DISTRO
	- Added: Packages file for Ubuntu Saucy Slamander
	- Added: Packages file for Ubuntu Trusty Tahr (experimental)

ENGINE:
	- Added: System (UNIX) user/group names are now stored in database
	- Added: IMSCP_CLEAR_SCREEN environment variable which allows to not clear the terminal screen at end of script
	- Added: SPF records for subdomains and external mail servers
	- Changed: Event listeners are now persistent. This allow to avoid self-registering
	- Changed: iMSCP::Templator renamed to iMSCP::TemplateParser
	- Changed: IP source for outbound mails is now set to the base server IP (Postfix - Temporary fix)
	- Changed: Inet protocol is now set according the base server IP type (Postfix - Temporary fix)
	- Fixed: External command died with signal 9 (without core dump)
	- Fixed: Keep current unix user uid/gid when updating the SYSTEM_USER_PREFIX and SYSTEM_USER_MIN_UID parameters
	- Fixed: Pass-in domain data to the listeners which listen to the *HttpdBuildConfFile and *HttpdBuildConf events
	- Fixed: Proftpd server is down after update
	- Fixed: Removed useless file tests on directory deletion
	- Fixed: Upstart/SysV init - Interoperability
	- Fixed: Usage of dynamic resolv.conf (See resolvconf(8))
	- Fixed: Wrong DNS record type for subdomain with IPv6 (A instead of AAAA)
	- Removed: Useless bind9 templates
	- Replaced: iMSCP::IP library by IMSCP::Net library (full rewrite using iproute tools instead of net-tools)

GUI: